--- a/package.json
+++ b/package.json
@@ -1,14 +1,21 @@
 {
   "name": "npm-test-button-vinicius",
-  "keywords": ["react", "components", "ui"],
-  "version": " 0.1.0",
+  "keywords": [
+    "react",
+    "components",
+    "ui"
+  ],
+  "version": " 0.1.3",
   "private": false,
   "main": "dist/index.js",
   "module": "dist/index.js",
-  "files": [ "dist", "README.md" ] ,
+  "files": [
+    "dist",
+    "README.md"
+  ],
   "repositório": {
-      "tipo": "git",
-      "url": "git+https://github.com/Vinicius-Santos-da-Silva/publish-npm-package-test.git"
+    "tipo": "git",
+    "url": "git+https://github.com/Vinicius-Santos-da-Silva/publish-npm-package-test.git"
   },
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
@@ -17,18 +24,34 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@storybook/addons": "^6.5.9",
+    "@storybook/theming": "^6.5.9",
+    "sass": "^1.52.3",
+    "styled-components": "^5.3.5"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "rm -rf dist && NODE_ENV=production babel src/lib --out-dir dist --copy-files",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "storybook": "start-storybook -p 6006 -s ./src",
+    "build-storybook": "build-storybook -s ./src"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest"
+    ],
+    "overrides": [
+      {
+        "files": [
+          "**/*.stories.*"
+        ],
+        "rules": {
+          "import/no-anonymous-default-export": "off"
+        }
+      }
     ]
   },
   "browserslist": {
@@ -46,6 +69,22 @@
   "devDependencies": {
     "@babel/cli": "^7.18.9",
     "@babel/core": "^7.18.9",
-    "@babel/preset-env": "^7.18.9"
+    "@babel/preset-env": "^7.18.9",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@storybook/addon-actions": "^6.5.8",
+    "@storybook/addon-essentials": "^6.5.8",
+    "@storybook/addon-interactions": "^6.5.8",
+    "@storybook/addon-links": "^6.5.8",
+    "@storybook/builder-webpack5": "^6.5.8",
+    "@storybook/manager-webpack5": "^6.5.8",
+    "@storybook/node-logger": "^6.5.8",
+    "@storybook/preset-create-react-app": "^4.1.2",
+    "@storybook/react": "^6.5.8",
+    "@storybook/testing-library": "0.0.12",
+    "babel-plugin-named-exports-order": "0.0.2",
+    "prop-types": "^15.8.1",
+    "webpack": "^5.73.0"
   }
 }
